--- a/tmux.conf
+++ b/tmux.conf
@@ -69,5 +69,36 @@ set-option -g status-left "\
 #[fg=${thm_green},bg=default]${TRIANGLE_CLOSE}\
 "
 
+# Style and set contents on the right section
+set-option -g status-right "\
+#[fg=${thm_green},bg=default]${TRIANGLE_OPEN}\
+#[bg=${thm_green},fg=${thm_bg}] #h \
+"
+# Set max length of left and right section
+set-option -g status-left-length 100
+set-option -g status-right-length 100
+
+# Style and set content for the inactive windows
+set-option -g window-status-format "\
+ \
+#I\
+#[fg=${thm_grey}]:\
+#[fg=default]#W\
+ \
+"
+
+# Style and set content for the active windows
+set-option -g window-status-current-format "\
+#[fg=${thm_green},bg=default]${TRIANGLE_OPEN}\
+#[bg=${thm_green},fg=${thm_bg}]#I\
+#[fg=${thm_bg}]:\
+#[fg=thm_bg]#W\
+#[fg=${thm_green},bg=default]${TRIANGLE_CLOSE}\
+"
+
+# Remove the separator between window list items, as we already have spacing
+# "around" inactive items
+set-option -g window-status-separator ""
+
 
 
