--- a/tmux.conf
+++ b/tmux.conf
@@ -59,7 +59,7 @@ set-option -g status-justify centre
 
 # Style and set contents on the left section
 set-option -g status-left "\
-#[bg=${thm_green},fg=${thm_bg}] #S \
+#[bg=${thm_green},fg=${thm_bg}] #S\\#{server_sessions} \
 #[fg=${thm_green},bg=default]${TRIANGLE_CLOSE}\
 "
 
